Create initial file/directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ dist
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# Webstorm config
+.idea
+
+# Generated static files
+*libs*
+*.css*
+*.bundle.js
+
+# Auth tokens
+secret.json
