--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "babel": "^6.1.18",
     "express": "^4.13.3",
+    "flickrapi": "^0.3.36",
     "isomorphic-fetch": "^2.2.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.0",
