Minor Amend to JSON config

--- a/src/static/config.json
+++ b/src/static/config.json
@@ -1,4 +1,4 @@
 {
-  "gitHubLinkText": "View project on GitHub",
-  "websiteLinkText": "designreact.co.uk"
+  "gitHubUrl": "https://github.com/designreact/universal-react-redux-flickr-app",
+  "websiteUrl": "http://designreact.co.uk"
 }
