Initial Redux implementation | Loading of config and strings data

--- a/src/static/config.json
+++ b/src/static/config.json
@@ -1,4 +1,5 @@
 {
+  "locale": "en-gb",
   "gitHubUrl": "https://github.com/designreact/universal-react-redux-flickr-app",
   "websiteUrl": "http://designreact.co.uk"
 }
