--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "eslint-plugin-react": "^3.10.0",
     "expect": "^1.13.0",
     "file-loader": "^0.8.4",
+    "history": "^1.13.1",
     "html-loader": "^0.3.0",
+    "isomorphic-fetch": "^2.2.0",
     "istanbul-instrumenter-loader": "^0.1.3",
     "json-loader": "^0.5.3",
     "karma": "^0.13.15",
@@ -62,6 +64,7 @@
     "nock": "^2.9.1",
     "phantomjs": "^1.9.17",
     "raw-loader": "^0.5.1",
+    "react-router": "^1.0.0",
     "react-tools": "^0.13.3",
     "redux-devtools": "^2.1.5",
     "sinon": "^1.15.4",
