--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-object-assign": "^1.2.1",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "css-loader": "^0.23.0",
     "eslint": "^1.10.1",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.10.0",
@@ -62,11 +63,13 @@
     "lodash": "^3.10.1",
     "mocha": "^2.3.4",
     "nock": "^2.9.1",
+    "node-sass": "^3.4.2",
     "phantomjs": "^1.9.17",
     "raw-loader": "^0.5.1",
     "react-router": "^1.0.0",
     "react-tools": "^0.13.3",
     "redux-devtools": "^2.1.5",
+    "sass-loader": "^3.1.2",
     "sinon": "^1.15.4",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.8",
