--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ coverage
 # Build folders
 build
 dist
+server
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
