--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
   "scripts": {
     "test": "./scripts/test.sh",
     "dev": "./scripts/development.sh",
-    "build": "./scripts/production.sh"
+    "build": "./scripts/production.sh",
+    "server": "./scripts/server.sh"
   },
   "dependencies": {
     "babel": "^6.1.18",
     "express": "^4.13.3",
-    "flickrapi": "^0.3.36",
-    "isomorphic-fetch": "^2.2.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
@@ -43,6 +42,7 @@
     "eslint-plugin-react": "^3.10.0",
     "expect": "^1.13.0",
     "file-loader": "^0.8.4",
+    "fs": "0.0.2",
     "history": "^1.13.1",
     "html-loader": "^0.3.0",
     "isomorphic-fetch": "^2.2.0",
@@ -63,6 +63,7 @@
     "lodash": "^3.10.1",
     "mocha": "^2.3.4",
     "nock": "^2.9.1",
+    "node-flickr": "^1.0.0",
     "node-sass": "^3.4.2",
     "phantomjs": "^1.9.17",
     "raw-loader": "^0.5.1",
