--- a/src/static/config.json
+++ b/src/static/config.json
@@ -1,5 +1,6 @@
 {
   "locale": "en-gb",
   "gitHubUrl": "https://github.com/designreact/universal-react-redux-flickr-app",
-  "websiteUrl": "http://designreact.co.uk"
+  "websiteUrl": "http://designreact.co.uk",
+  "serverUrl": "http://http://localhost:1337/api/v1/"
 }
