Wire up server requests to state | Add CORS policy to server

--- a/src/static/config.json
+++ b/src/static/config.json
@@ -2,5 +2,5 @@
   "locale": "en-gb",
   "gitHubUrl": "https://github.com/designreact/universal-react-redux-flickr-app",
   "websiteUrl": "http://designreact.co.uk",
-  "serverUrl": "http://http://localhost:1337/api/v1/"
+  "serverUrl": "http://localhost:1337/api/v1/"
 }
