--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "node-sass": "^3.4.2",
     "phantomjs": "^1.9.17",
     "raw-loader": "^0.5.1",
+    "react-hot-loader": "^1.3.0",
     "react-router": "^1.0.0",
     "react-tools": "^0.13.3",
     "redux-devtools": "^2.1.5",
