--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "babel": "^6.1.18",
+    "babel-plugin-transform-runtime": "^6.1.18",
+    "core-js": "^1.2.6",
     "express": "^4.13.3",
     "react": "^0.14.3",
     "react-dom": "^0.14.0",
@@ -32,11 +34,14 @@
     "serve-static": "^1.10.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.2.0",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-plugin-object-assign": "^1.2.1",
+    "babel-plugin-react-transform": "^1.1.1",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
     "css-loader": "^0.23.0",
     "eslint": "^1.10.1",
     "eslint-loader": "^1.1.1",
@@ -67,15 +72,19 @@
     "node-flickr": "^1.0.0",
     "node-sass": "^3.4.2",
     "phantomjs": "^1.9.17",
+    "qs": "^6.0.1",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
     "react-router": "^1.0.0",
     "react-tools": "^0.13.3",
+    "react-transform-hmr": "^1.0.1",
     "redux-devtools": "^2.1.5",
     "sass-loader": "^3.1.2",
     "sinon": "^1.15.4",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.8",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-dev-server": "^1.12.1",
+    "webpack-hot-middleware": "^2.6.0"
   }
 }
